Update update_main